# fastapi-blog-pet-project

./: pyproject.toml
app/: config.py  main.py
app/api/endpoints/: auth.py  users.py
app/database/: database.py
app/schemas/: auth.py
app/services/: auth_service.py  user_service.py
app/utils/: auth.py
tests/: conftest.py  test_main.py
